DORM-6 feat(modules): added shared module, core module, logic module

--- a/src/app/login/registration-page/registration-page.component.html
+++ b/src/app/login/registration-page/registration-page.component.html
@@ -13,9 +13,9 @@
     >
   </label>
 
-  <label>Confirm password {{login}}
+  <label>Confirm password 
     <input type="password" required
-      [(ngModel)]="confirm"
+      [(ngModel)="confirm"
     >
   </label>
 
