DORM-8 refactor(register): refactor register component

--- a/src/app/login/registration-page/registration-page.component.html
+++ b/src/app/login/registration-page/registration-page.component.html
@@ -1,7 +1,7 @@
-<form class="register" (ngSubmit)="onSubmit()" #signUpForm="ngForm">
-  <h3>Register new user</h3>
+<form class="register wrapper" (ngSubmit)="onSubmit()" #signUpForm="ngForm">
+  <h3>{{pageName}}</h3>
 
-  <label>Login
+  <label>Username
     <input name="login" required
       [(ngModel)]="login"
     >
@@ -13,17 +13,24 @@
     >
   </label>
 
-  <label>Confirm password
+  <label *ngIf="!pageState">Confirm password
     <input type="password" name="confirm" required
       [(ngModel)]="confirm"
     >
   </label>
 
-  <button type="submit"
-    [disabled]="signUpForm.form.invalid"
-  >Register</button>
-
   <p
     [hidden]="isConfirm"
   >Passwords do not match!</p>
+
+  <div class="buttons">
+    <button type="submit" *ngIf="pageState">LogIn</button>
+    <button *ngIf="!pageState" (click)="goToLogin()">Back</button>
+
+    <button *ngIf="pageState" (click)="goToRegister()">Register</button>
+    <button type="submit"
+      [disabled]="signUpForm.form.invalid"
+      *ngIf="!pageState"
+    >Register</button>
+  </div>
 </form>
