--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,5 @@
 <h1>Dorm</h1>
 
-<div class="login-container">
-  <form class="login-form">
-    <input type="text" name="login" placeholder="Login" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <button class="submit-button" type="submit">LogIn</button>
-  </form>
+<div class="user-container">
 
-  <button class="register-button"
-    (click)="goToRegisterPage()"
-  >Register</button>
 </div>
