--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -17,7 +17,7 @@ input {
   margin-right: 5px;
 }
 
-.login-container {
+.user-container {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
