--- a/src/app/login/registration-page/registration-page.component.scss
+++ b/src/app/login/registration-page/registration-page.component.scss
@@ -4,9 +4,18 @@
   width: 100%;
 }
 
+h3 {
+  margin: 0 0 20px 0;
+}
+
 .register {
   width: 320px;
   margin-top: 7vh;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-around;
 }
 
 label {
