--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <h3>Students:</h3>
 
-<ul>
+<ul class="wrapper">
   <li *ngFor="let student of students">
     <p>{{student.firstname}} {{student.lastname}}</p>
     <p>{{student.date}}</p>
