--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,17 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
 }
+
+button {
+  cursor: pointer;
+
+  &:disabled {
+    cursor: default;
+  }
+}
+
+.wrapper {
+  padding: 20px;
+  background-color: rgb(226, 226, 226);
+  border-radius: 3px;
+}
