DORM-9 feat(i18n): added i18n library and simple translations

--- a/src/app/shared/google-wrapper/google-wrapper.component.html
+++ b/src/app/shared/google-wrapper/google-wrapper.component.html
@@ -5,7 +5,7 @@
     <div class="google-wrapper__label"
     [ngClass]="isElementActive ? 'border' : 'placeholder'"
     >
-    {{labelContent}}
+    {{labelContent | translate}}
     </div>
     <ng-content></ng-content>   
 </div>
