--- a/src/app/login/registration-page/registration-page.component.html
+++ b/src/app/login/registration-page/registration-page.component.html
@@ -1,27 +1,33 @@
 <form class="register wrapper" (ngSubmit)="onSubmit()" #signUpForm="ngForm">
-  <h3>{{pageName}}</h3>
+  <h3>{{pageName | translate}}</h3>
 
 <div class="register__container">
-  <app-google-input class="register__input-field" [placeholder]="'Login...'" [label]="'login'" (valueChanged)="changedLogin($event)"></app-google-input>
-  <app-google-input class="register__input-field" [placeholder]="'Password...'" [label]="'password'" (valueChanged)="changedPassword($event)"></app-google-input>
-  <app-google-input class="register__input-field" [placeholder]="'Repeat password...'" [label]="'password'" (valueChanged)="changedRepeatPassword($event)"></app-google-input>
+  <app-google-input class="register__input-field" 
+  [placeholder]="'registration_page.placeholder.login'" 
+  [label]="'registration_page.label.login'" 
+  (valueChanged)="changedLogin($event)"></app-google-input>
+  <app-google-input class="register__input-field"
+   [placeholder]="'registration_page.placeholder.password'" 
+   [label]="'registration_page.label.password'" 
+   (valueChanged)="changedPassword($event)"></app-google-input>
+  <app-google-input class="register__input-field" 
+  [placeholder]="'registration_page.placeholder.repeat_password'" 
+  [label]="'registration_page.label.repeat_password'" 
+  (valueChanged)="changedRepeatPassword($event)"></app-google-input>
 </div>
-
-
 
   <p
     [hidden]="isConfirm"
-  >Passwords do not match!</p>
-
+  >{{ 'registration_page.error.password_do_not_match' | translate}}</p>
   <div class="buttons">
-    <button type="submit" *ngIf="pageState">LogIn</button>
-    <button *ngIf="!pageState" (click)="goToLogin()">Back</button>
+    <button type="submit" *ngIf="pageState">{{ 'registration_page.button.login' | translate}}</button>
+    <button *ngIf="!pageState" (click)="goToLogin()">{{ 'registration_page.button.back' | translate}}</button>
 
-    <button *ngIf="pageState" (click)="goToRegister()">Register</button>
+    <button *ngIf="pageState" (click)="goToRegister()">{{ 'registration_page.button.register' | translate}}</button>
     <button type="submit"
       [disabled]="signUpForm.form.invalid"
       *ngIf="!pageState"
-    >Register</button>
+    >{{ 'registration_page.button.register' | translate}}</button>
   </div>
 </form>
 
