--- a/src/app/login/login-page/login-page.component.scss
+++ b/src/app/login/login-page/login-page.component.scss
@@ -37,15 +37,15 @@ button {
   margin-top: 10px;
 }
 
-p {
+.caution-label {
   color: red;
   text-align: center;
 }
 
-.loginButton {
+.login-button {
   background-color: greenyellow;
 }
 
-.registerButton {
+.register-button {
   background-color: lightskyblue;
 }
