--- a/src/app/login/login-page/login-page.component.scss
+++ b/src/app/login/login-page/login-page.component.scss
@@ -2,15 +2,11 @@
   display: flex;
   justify-content: center;
   width: 100%;
-}
-
-h3 {
-  margin: 0 0 20px 0;
+  margin-top: 7vh;
 }
 
 .register {
   width: 320px;
-  margin-top: 7vh;
 
   &__container {
     display: flex;
@@ -44,8 +40,16 @@ button {
 
 .login-button {
   background-color: greenyellow;
+
+  &:hover {
+    background-color: lighten(greenyellow, 15%);
+  }
 }
 
 .register-button {
   background-color: lightskyblue;
+
+  &:hover {
+    background-color: lighten(lightskyblue, 5%);
+  }
 }
