--- a/src/app/pages/main-page/main-page.component.scss
+++ b/src/app/pages/main-page/main-page.component.scss
@@ -1,8 +1,9 @@
 :host {
+  width: 100%;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
   margin-top: 7vh;
 }
 
@@ -11,6 +12,13 @@
   flex-direction: column;
   align-items: center;
   width: 60%;
+}
+
+.headline {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .students-list {
@@ -28,12 +36,20 @@
 }
 
 li {
-  padding: 10px;
+  padding: 5px 10px;
   border-bottom: 1px solid grey;
   list-style-type: none;
 
   &:hover {
     cursor: pointer;
     background-color: darken(#e2e2e2, 5%);
+  }
+}
+
+.add-new-button {
+  background-color: greenyellow;
+
+  &:hover {
+    background-color: lighten(greenyellow, 15%);
   }
 }
