--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,13 +6,19 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+h3 {
+  margin: 0 0 20px 0;
+}
+
 button {
   height: 35px;
   min-width: 90px;
   padding: 0 7px;
   border: none;
+  border-radius: 3px;
   font-size: 14px;
   cursor: pointer;
+  transition: background-color .3s;
 
   &:disabled {
     cursor: default;
