--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -12,7 +12,7 @@
 
   <ol class="students-list">
     <li
-      *ngFor="let student of students | search:searchString let i = index"
+      *ngFor="let student of studentsList | search:searchString let i = index"
 
       (click)="goDetailPage(student)"
     >
