--- a/src/app/login/login-page/login-page.component.html
+++ b/src/app/login/login-page/login-page.component.html
@@ -23,9 +23,10 @@
     ></app-google-input>
   </div>
 
-  <p class="caution-label"
-    [hidden]="isConfirm"
-  >{{cautionText | translate}}</p>
+  <app-caution-label
+    *ngIf="!isConfirm"
+    [text]="cautionText"
+  ></app-caution-label>
 
   <div class="buttons">
     <button class="login-button" type="submit"
