DORM-18 feat(main): add user rights check to pages

--- a/src/app/pages/detail-page/detail-page.component.html
+++ b/src/app/pages/detail-page/detail-page.component.html
@@ -22,6 +22,8 @@
 
   <div class="buttons">
     <button (click)="goBack()">{{'registration_page.button.back' | translate}}</button>
-    <button class="delete-button">{{'detail_page.delete' | translate}}</button>
+    <button class="delete-button"
+      *ngIf="rights"
+    >{{'detail_page.delete' | translate}}</button>
   </div>
 </div>
