--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -1,7 +1,10 @@
 <div class="wrapper">
   <div class="headline">
     <h3>{{'main_page.title' | translate}}</h3>
-    <button class="add-new-button" (click)="goAddPage()">{{'main_page.add_new' | translate}}</button>
+    <button class="add-new-button"
+      *ngIf="rights"
+      (click)="goAddPage()"
+    >{{'main_page.add_new' | translate}}</button>
   </div>
 
   <app-google-input
