DORM-36 feat(detail): add Update button adn function

--- a/src/app/pages/detail-page/detail-page.component.html
+++ b/src/app/pages/detail-page/detail-page.component.html
@@ -22,6 +22,12 @@
 
   <div class="buttons">
     <button (click)="goBack()">{{'registration_page.button.back' | translate}}</button>
+
+    <button class="update-button"
+      *ngIf="rights"
+      (click)="onUpdate()"
+    >{{'detail_page.update' | translate}}</button>
+
     <button class="delete-button"
       *ngIf="rights"
       (click)="onDelete()"
