DORM-38 refactor(login): refactor login

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,5 +6,5 @@
   {{userName}}
   <p class="logout"
     (click)="logout()"
-  >{{'registration_page.button.logout' | translate}}</p>
+  >{{'login_page.button.logout' | translate}}</p>
 </div>
