--- a/src/app/login/login-page/login-page.component.html
+++ b/src/app/login/login-page/login-page.component.html
@@ -1,50 +1,30 @@
-<form class="register wrapper" (ngSubmit)="onSubmit()" #signUpForm="ngForm">
-  <h3>{{ pageName | translate }}</h3>
+<form class="login wrapper" (ngSubmit)="onSubmit()" #signUpForm="ngForm">
+  <h3>{{'login_page.title' | translate}}</h3>
 
-  <div class="register__container">
+  <div class="login__container">
     <app-google-input class="register__input-field"
       [name]="'login'"
-      [placeholder]="'registration_page.placeholder.login'"
-      [label]="'registration_page.label.login'"
+      [placeholder]="'login_page.placeholder.login'"
+      [label]="'login_page.label.login'"
       (valueChanged)="changeInput('login', $event)"
     ></app-google-input>
+
     <app-google-input class="register__input-field"
       [name]="'password'" [type]="'password'"
-      [placeholder]="'registration_page.placeholder.password'"
-      [label]="'registration_page.label.password'"
+      [placeholder]="'login_page.placeholder.password'"
+      [label]="'login_page.label.password'"
       (valueChanged)="changeInput('password', $event)"
-    ></app-google-input>
-    <app-google-input class="register__input-field"
-      [name]="'submit'" [type]="'password'"
-      [placeholder]="'registration_page.placeholder.repeat_password'"
-      [label]="'registration_page.label.repeat_password'"
-      (valueChanged)="changeInput('confirm', $event)"
-      [hidden]="pageState"
     ></app-google-input>
   </div>
 
   <app-caution-label
     *ngIf="!isConfirm"
-    [text]="cautionText"
+    [text]="'login_page.error'"
   ></app-caution-label>
 
   <div class="buttons">
     <button class="login-button" type="submit"
-      *ngIf="pageState"
-    >{{ 'registration_page.button.login' | translate}}</button>
-    <button
-      *ngIf="!pageState"
-      (click)="goToLogin()"
-    >{{ 'registration_page.button.back' | translate}}</button>
-
-    <button class="register-button"
-      *ngIf="pageState"
-      (click)="goToRegister()"
-    >{{ 'registration_page.button.register' | translate}}</button>
-    <button class="register-button" type="submit"
-      [disabled]="signUpForm.form.invalid"
-      *ngIf="!pageState"
-    >{{ 'registration_page.button.register' | translate}}</button>
+    >{{'login_page.button.login' | translate}}</button>
   </div>
 </form>
 
