--- a/src/app/pages/detail-page/detail-page.component.html
+++ b/src/app/pages/detail-page/detail-page.component.html
@@ -15,12 +15,20 @@
     <span>{{student.date}}</span>
   </div>
   <div class="element">
+    {{'detail_page.fname' | translate}}:
+    <input class="edit-field" [disabled]="!rights" [(ngModel)]="student.firstname">
+  </div>
+  <div class="element">
+    {{'detail_page.lname' | translate}}:
+    <input class="edit-field" [disabled]="!rights" [(ngModel)]="student.lastname">
+  </div>
+  <div class="element">
     {{'detail_page.floor' | translate}}:
-    <span>{{student.studfloor.Floor}}</span>
+    <input class="edit-field" type="number" [disabled]="!rights" [(ngModel)]="student.studfloor.Floor">
   </div>
   <div class="element">
     {{'detail_page.room' | translate}}:
-    <span>{{student.studroom.Room}}</span>
+    <input class="edit-field" type="number" [disabled]="!rights" [(ngModel)]="student.studroom.Room">
   </div>
 
   <div class="buttons">
