--- a/src/app/pages/add-page/add-page.component.scss
+++ b/src/app/pages/add-page/add-page.component.scss
@@ -17,6 +17,12 @@
   align-items: center;
 }
 
+.create-worker {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+}
+
 .separator {
   width: 80%;
   height: 1px;
