--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import "~angular-notifier/styles";
+
 body {
   padding: 0;
   margin: 0;
