--- a/src/app/pages/detail-page/detail-page.component.scss
+++ b/src/app/pages/detail-page/detail-page.component.scss
@@ -10,6 +10,26 @@
   min-width: 400px;
 }
 
+.detail-information {
+  display: flex;
+  justify-content: center;
+}
+
+.detail-student {
+  margin: 5px 10px 5px 0;
+}
+
+.detail-provision {
+  width: 200px;
+  margin: 5px 0;
+  padding-left: 10px;
+  border-left: 1px solid grey;
+
+  p {
+    margin: 0;
+  }
+}
+
 .element-name {
   font-size: 30px;
   text-align: center;
@@ -30,6 +50,10 @@
   width: 200px;
   height: 25px;
   font-size: 18px;
+}
+
+.provision-input {
+  width: 50px;
 }
 
 .buttons {
