DORM-57 refactor(detail): refactor detail page

--- a/src/app/pages/add-page/add-page.component.html
+++ b/src/app/pages/add-page/add-page.component.html
@@ -14,16 +14,9 @@
       (valueChanged)="setData('password', $event)"
     ></app-google-input>
 
-    <label class="create-worker" *ngIf="role==='admin'">
-      <input type="checkbox" name="isWorker"
-        [(ngModel)]="isWorker"
-        [disabled]="username!=='worker'"
-      >
-    {{'add_page.worker' | translate}}</label>
-
     <div class="separator"></div>
 
-    <div [hidden]="isWorker">
+    <div>
       <app-google-input
         [placeholder]="'add_page.first'"
         [label]="'add_page.first'"
