DORM-56 feat(main): new main page

--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -1,3 +1,15 @@
 <div class="wrapper">
+  <h3>{{'main_page.title' | translate}}</h3>
 
+  <div class="menu">
+    <button
+      (click)="goToStudents()"
+    >{{'main_page.buttons.students' | translate}}</button>
+    <button
+      (click)="goToStudents()"
+    >{{'main_page.buttons.workers' | translate}}</button>
+    <button
+      (click)="goToStudents()"
+    >{{'main_page.buttons.rooms' | translate}}</button>
+  </div>
 </div>
