DORM-54 feat(worker): add worker's add, detail, list pages

--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -6,7 +6,7 @@
       (click)="goToStudents()"
     >{{'main_page.buttons.students' | translate}}</button>
     <button
-      (click)="goToStudents()"
+      (click)="goToWorkers()"
     >{{'main_page.buttons.workers' | translate}}</button>
     <button
       (click)="goToStudents()"
