--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,15 @@ button {
   }
 }
 
+.input-field {
+  width: 200px;
+  height: 25px;
+  padding: 5px;
+  font-size: 18px;
+  border: none;
+  background-color: rgb(255, 255, 255, 0.5);
+}
+
 .wrapper {
   padding: 20px;
   background-color: rgb(226, 226, 226);
