--- a/src/app/pages/detail-page/detail-page.component.html
+++ b/src/app/pages/detail-page/detail-page.component.html
@@ -1,36 +1,36 @@
 <div class="wrapper">
   <h3>{{'detail_page.title' | translate}}</h3>
 
-  <p class="element-name">{{student.firstname}} {{student.lastname}}</p>
+  <p class="element-name">{{student.FirstName}} {{student.LastName}}</p>
   <p class="element-name"
-    *ngIf="student.uuid === uuid"
+    *ngIf="student.UUID === uuid"
   >({{'detail_page.you' | translate}})</p>
 
   <div class="detail-information">
     <div class="detail-student">
       <div class="element">
         {{'detail_page.id' | translate}}:
-        <span>{{student.id}}</span>
+        <span>{{student.ID}}</span>
       </div>
       <div class="element">
         {{'detail_page.date' | translate}}:
-        <span>{{student.date}}</span>
+        <span>{{student.Date}}</span>
       </div>
       <div class="element">
         {{'detail_page.fname' | translate}}:
-        <input class="edit-field" [disabled]="!rights" [(ngModel)]="student.firstname">
+        <input class="edit-field" [disabled]="!rights" [(ngModel)]="student.FirstName">
       </div>
       <div class="element">
         {{'detail_page.lname' | translate}}:
-        <input class="edit-field" [disabled]="!rights" [(ngModel)]="student.lastname">
+        <input class="edit-field" [disabled]="!rights" [(ngModel)]="student.LastName">
       </div>
       <div class="element">
         {{'detail_page.floor' | translate}}:
-        <input class="edit-field" type="number" [disabled]="!rights" [(ngModel)]="student.studfloor.Floor">
+        <input class="edit-field" type="number" [disabled]="!rights" [(ngModel)]="student.StudFloor.Floor">
       </div>
       <div class="element">
         {{'detail_page.room' | translate}}:
-        <input class="edit-field" type="number" [disabled]="!rights" [(ngModel)]="student.studroom.Room">
+        <input class="edit-field" type="number" [disabled]="!rights" [(ngModel)]="student.StudRoom.Room">
       </div>
     </div>
 
@@ -39,23 +39,23 @@
 
       <div class="element">
         {{'detail_page.provisions.bedhseet' | translate}}:
-        <input class="edit-field provision-input" type="number" [disabled]="!rights" [(ngModel)]="provision.bedhseet">
+        <input class="edit-field provision-input" type="number" [disabled]="!rights" [(ngModel)]="provision.Bedsheet">
       </div>
       <div class="element">
         {{'detail_page.provisions.pillow' | translate}}:
-        <input class="edit-field provision-input" type="number" [disabled]="!rights" [(ngModel)]="provision.pillow">
+        <input class="edit-field provision-input" type="number" [disabled]="!rights" [(ngModel)]="provision.Pillow">
       </div>
       <div class="element">
         {{'detail_page.provisions.towel' | translate}}:
-        <input class="edit-field provision-input" type="number" [disabled]="!rights" [(ngModel)]="provision.towel">
+        <input class="edit-field provision-input" type="number" [disabled]="!rights" [(ngModel)]="provision.Towel">
       </div>
       <div class="element">
         {{'detail_page.provisions.blanket' | translate}}:
-        <input class="edit-field provision-input" type="number" [disabled]="!rights" [(ngModel)]="provision.blanket">
+        <input class="edit-field provision-input" type="number" [disabled]="!rights" [(ngModel)]="provision.Blanket">
       </div>
       <div class="element">
         {{'detail_page.provisions.curtain' | translate}}:
-        <input class="edit-field provision-input" type="number" [disabled]="!rights" [(ngModel)]="provision.curtain">
+        <input class="edit-field provision-input" type="number" [disabled]="!rights" [(ngModel)]="provision.Curtain">
       </div>
     </div>
   </div>
