DORM-55 feat(room): add room list, detail, create pages

--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -9,7 +9,7 @@
       (click)="goToWorkers()"
     >{{'main_page.buttons.workers' | translate}}</button>
     <button
-      (click)="goToStudents()"
+      (click)="goToRooms()"
     >{{'main_page.buttons.rooms' | translate}}</button>
   </div>
 </div>
