--- a/src/app/pages/students-page/students-page.component.html
+++ b/src/app/pages/students-page/students-page.component.html
@@ -13,14 +13,14 @@
     (valueChanged)="setSearchString($event)"
   ></app-google-input>
 
-  <ol class="students-list" *ngIf="studentsList.length; else noList">
+  <ol class="list" *ngIf="studentsList.length; else noList">
     <li
       *ngFor="let student of studentsList | search:searchString let i = index"
       (click)="goDetailPage(student)"
       [className]="student.uuid === uuid ? 'selected' : ''"
     >
-      <p class="students-list__title">{{i + 1}}. {{student.FirstName}} {{student.LastName}}</p>
-      <p class="students-list__text">Room {{student.StudRoom.Room}}</p>
+      <p class="list__title">{{i + 1}}. {{student.FirstName}} {{student.LastName}}</p>
+      <p class="list__text">Room {{student.StudRoom.Room}}</p>
     </li>
   </ol>
 
