DORM-62 feat(login): add Guest user

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -18,6 +18,9 @@
   </div>
 
   <div class="buttons">
+    <button class="guest-button" type="button"
+      (click)="loginGuest()"
+    >{{'login_page.button.guest' | translate}}</button>
     <button class="login-button" type="submit"
     >{{'login_page.button.login' | translate}}</button>
   </div>
